Stopped the canvas elements being drawn with blurred edges!

--- a/style/style.scss
+++ b/style/style.scss
@@ -50,6 +50,9 @@ html,body {
     h1 {
         padding: 5px 5px;
         text-align: center;
+        border-bottom: solid 1px #ccc;
+        width: 70%;
+        margin: 0 auto;
     }
 }
 
@@ -62,13 +65,14 @@ html,body {
     right: 0;
     padding: 5px;
     overflow: auto;
-    h1, h3 {
+    text-align:center;
+    h1, h2 {
         color: #eee;
         padding: 5px;
         margin: 5px;
         text-align: center;
     }
-    h3 {
+    h2 {
         border-bottom: solid 1px #eee;
         width: 50px;
         margin: 0 auto;
@@ -76,8 +80,7 @@ html,body {
     }
 }
 
-#gauge_canvas {
-    background-color: lime;
-    width: 100%;
-    height: 100%;
+#results_canvas {
+    display: inline-block;
+    border: #fff 1px solid;
 }
